# aacos-app

./: .gitignore  README.md  api.js  cleanup.sh  docker-compose.yml  index.html  main.js  package-lock.json  package.json  preload.js  tailwind.config.ts  tsconfig.json
.github/workflows/: main.yml
__tests__/api/: rate-limit.test.ts  signal.test.ts
__tests__/components/: signal-flow.test.tsx
app/: page.tsx
backend/: app.py  pyproject.toml
backend/lib/: db.ts  signalSchema.ts  validate.ts
backend/lib/db/: insertSignal.ts
backend/tests/: signal-flow.test.spec.ts
components/: GptChatDemo.jsx  SignalTransmitter.tsx  SignalsContext.jsx
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/components/: App.jsx  GptChatDemo.jsx  SignalFeed.jsx  SignalFeed.tsx  SignalRecorder.jsx  SignalRecorder.ts  SignalTransmitter.jsx  SignalsContext.jsx
frontend/pages/api/signal/: route.js
lib/: purify.ts  sanitize.ts
pages/api/: signal.ts
public/: package.json
src/: App.jsx
src/app/: globals.css  layout.tsx  page.tsx
src/components/: App.tsx  ChatUI.jsx  IntroFlowUI.jsx  SignalFeed.tsx  SignalRecorder.ts  SignalTransmitter.tsx
src/lib/: rateLimit.ts  validate.ts
src/pages/api/: signal.ts
src/pages/api/signal/: route.ts
src/tests/: signal-flow.test.spec.tsx
state/: useSignalStore.ts
user_data/: Dave.json  David.json  [object Object].json  default.json  null.json  userPrefs.json
